monitoring/controllers/base/grafana/tempo/ingress-patch.yaml
# tempo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: PLACEHOLDER_TEMPO_READ_ENDPOINT
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tempo-query-frontend
            port:
              number: 3200
  - host: PLACEHOLDER_TEMPO_WRITE_ENDPOINT
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tempo-distributor
            port:
              number: 3200
